# Mahakosh

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: __init__.py  main.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  base.py  registry.py
backend/alembic/: env.py
backend/cfo/: __init__.py  approval_gate.py  service.py  types.py
backend/channels/: __init__.py  approval_actions.py  file_processor.py  notification_center.py  register.py  session_sync.py
backend/chat/: __init__.py  chat_gateway.py  chat_orchestrator.py  citation_engine.py  context_builder.py  conversation_manager.py  intent_engine.py  memory_manager.py  reasoning_engine.py  response_generator.py  retrieval_service.py  transparency_builder.py  types.py
backend/connectors/: __init__.py  base.py  registry.py
backend/core/: config.py  database.py  default_roles.py  dependencies.py  platform_auth.py  security.py
backend/extensions/: __init__.py  base.py  registry.py
backend/intelligence/: __init__.py  service.py
backend/middleware/: logging.py  tenant.py
backend/models/: __init__.py  accounting.py  accounting_twin.py  agent.py  agent_swarm.py  analytics.py  approval.py  audit.py  base.py  cfo.py  channels.py  chat.py  customer.py  document.py  extensions.py  gst.py  item.py  knowledge.py  ledger.py  notification.py  ocr_job.py  platform.py  query.py  report.py  role.py  setting.py  tenant.py  user.py  vendor.py  voucher.py  workflow.py  workflow_monitoring.py
backend/platform/: __init__.py  feature_gate.py  governance.py  partner_service.py  plans.py  (+3 more)
(+371 files in other folders)
